Bug: reduced heading spacing Task: completed internet invention page

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -4,7 +4,7 @@ h1{
     font-size: 50px;
 }
 body{
-    padding-top: 60px;
+    padding-top: 5px;
     padding-left: 100px;
     padding-right: 100px;
     font-family: 'Roboto', sans-serif;
@@ -34,11 +34,7 @@ html, body {
     margin: 0;
     height: 100%;
 }
-.cropped {
-    width: 100%; /* width of container */
-    height: 500px; /* height of container */
-    overflow: hidden;
-}
+
 p{
     font-size: 20px;
 }
